# lego_challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/api/: dependencies.py  exception_handlers.py  main.py
src/api/routers/: colours.py  health.py  models.py  response_models.py  sets.py  users.py
src/cli/: cli.py
src/client/: colour_harverster.py  set_harverster.py  user_harverster.py
src/domain/entities/: colour.py  inventory.py  part.py  set.py  shape.py  user.py
src/domain/use_cases/: analyse_buildability.py  analyse_users.py  extract_db_from_api.py  migrate_db_from_api.py
src/ports/repositories/: bricks_repository.py  in_memory_bricks_repository.py  sql_brick_repository.py  sql_brick_repository_schema.py
src/scripts/: initialise_basic_data_in_db.py
src/tests/: conftest.py
src/tests/integration/: conftest.py
src/tests/integration/domain/: buildability_sql_integration_test.py  users_sql_integration_test.py
src/tests/integration/repositories/: sql_bricks_repository_api_test.py  sql_bricks_repository_test.py
src/tests/unit/: analyse_buildability_test.py  analyse_users_test.py  conftest.py
