[project]
name = "lego-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.123.10",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."
